--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "font-awesome": "fontawesome#^4.6.3",
+    "bootstrap-sass": "^3.3.7"
   }
 }
