--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-concat": "^2.6.0",
+    "gulp-csso": "^2.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-inject": "^4.1.0",
     "gulp-load-plugins": "^1.3.0",
