--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-load-plugins": "^1.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "main-bower-files": "^2.13.1",
